--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,7 @@ services:
     restart: always
     ports:
       - '172.17.0.1:8983:8983'
+    environment:
+      - SOLR_ENABLE_AUTHENTICATION=yes
+      - SOLR_ADMIN_USERNAME=${SOLR_ADMIN_USERNAME}
+      - SOLR_ADMIN_PASSWORD=${ADMIN_PASSWORD}
