--- a/elestio.yml
+++ b/elestio.yml
@@ -8,14 +8,8 @@ ports:
     path: "/"
     isAuth: false
 environments:
-  - key: SOFTWARE_VERSION_TAG
-    value: "lts-jdk11"
-  - key: JENKINS_USERNAME
+  - key: SOLR_ADMIN_USERNAME
     value: "root"
-  - key: JENKINS_PASSWORD
-    value: "random_password"
-  - key: "JENKINS_EMAIL"
-    value: "[EMAIL]"
   - key: "ADMIN_PASSWORD"
     value: "random_password"
 
