--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,4 @@ services:
       - SOLR_ENABLE_AUTHENTICATION=yes
       - SOLR_ADMIN_USERNAME=${SOLR_ADMIN_USERNAME}
       - SOLR_ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - SOLR_CORES=my_core
