--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     image: bitnami/solr:latest
     restart: always
     ports:
-      - '172.17.0.1:8983:8983'
+      - '8983:8983'
     environment:
       - SOLR_ENABLE_AUTHENTICATION=yes
       - SOLR_ADMIN_USERNAME=${SOLR_ADMIN_USERNAME}
       - SOLR_ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - SOLR_CORES=my_core
+    volumes:
+      - ./data:/var/solr
