--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   solr-node1:
-    image: bitnami/solr:latest
+    image: solr:latest
     restart: always
     ports:
       - '172.17.0.1:8983:8983'
