--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   solr-node1:
-    image: solr:latest
+    image: bitnami/solr:latest
     restart: always
     ports:
       - '172.17.0.1:8983:8983'
@@ -12,4 +12,4 @@ services:
       - SOLR_ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - SOLR_CORES=my_core
     volumes:
-      - "./data:/var/solr"
+      - "./data:/bitnami"
