--- a/tests/8.11/.env
+++ b/tests/8.11/.env
@@ -1,4 +1,4 @@
 ADMIN_USERNAME=test@gmail.com
-TEST_URL=172.17.0.1:8983/solr/#/
+TEST_URL=http://172.17.0.1:8983/solr/#/
 ADMIN_PASSWORD=test_admin
 SOFTWARE_VERSION_TAG=8.11
