--- a/tests/8.11/docker-compose.yml
+++ b/tests/8.11/docker-compose.yml
@@ -12,4 +12,4 @@ services:
       - SOLR_ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - SOLR_CORES=default
     volumes:
-      - "./data:/var/solr/data"
+      - ./data:/var/solr/data:Z
